@@ -16,96 +16,15 @@
 
 # Define g++ callbacks for dg.exp.
 
-load_lib dg.exp
-load_lib file-format.exp
-load_lib target-supports.exp
-load_lib scanasm.exp
+load_lib gcc-dg.exp
 
 proc g++-dg-test { prog do_what extra_tool_flags } {
-    # Set up the compiler flags, based on what we're going to do.
-
-    set options [list]
-
-    # Tests should be able to use "dg-do repo".  However, the dg test
-    # driver checks the argument to dg-do against a list of acceptable
-    # options, and "repo" is not among them.  Therefore, we resort to
-    # this ugly approach.
-    if [string match "*-frepo*" $extra_tool_flags] then {
-	set do_what "repo"
-    }
-
-    switch $do_what {
-	"preprocess" {
-	    set compile_type "preprocess"
-	    set output_file "[file rootname [file tail $prog]].i"
-	}
-	"compile" {
-	    set compile_type "assembly"
-	    set output_file "[file rootname [file tail $prog]].s"
-	}
-	"assemble" {
-	    set compile_type "object"
-	    set output_file "[file rootname [file tail $prog]].o"
-	}
-	"precompile" {
-	    set compile_type "precompiled_header"
-	    set output_file "[file tail $prog].gch"
-	}
-	"link" {
-	    set compile_type "executable"
-	    set output_file "[file rootname [file tail $prog]].exe"
-	    # The following line is needed for targets like the i960 where
-	    # the default output file is b.out.  Sigh.
-	}
-	"repo" {
-	    set compile_type "object"
-	    set output_file "[file rootname [file tail $prog]].o"
-	}
-	"run" {
-	    set compile_type "executable"
-	    # FIXME: "./" is to cope with "." not being in $PATH.
-	    # Should this be handled elsewhere?
-	    # YES.
-	    set output_file "./[file rootname [file tail $prog]].exe"
-	    # This is the only place where we care if an executable was
-	    # created or not.  If it was, dg.exp will try to run it.
-	    remote_file build delete $output_file;
-	}
-	default {
-	    perror "$do_what: not a valid dg-do keyword"
-	    return ""
-	}
-    }
-
-    if { $extra_tool_flags != "" } {
-	lappend options "additional_flags=$extra_tool_flags"
-    }
-
-    set comp_output [g++_target_compile "$prog" "$output_file" "$compile_type" $options];
-
-    if { $do_what == "repo" } {
-	set object_file "$output_file"
-	set output_file "[file rootname [file tail $prog]].exe"
-	concat comp_output \
-	       [g++_target_compile "$object_file" "$output_file" "executable" $options]
-    }
-
-    return [list $comp_output $output_file]
+    return [gcc-dg-test-1 g++_target_compile $prog $do_what $extra_tool_flags]
 }
 
 
 proc g++-dg-prune { system text } {
-    set text [prune_gcc_output $text]
-
-    # If we see "region xxx is full" then the testcase is too big for ram.
-    # This is tricky to deal with in a large testsuite like c-torture so
-    # deal with it here.  Just mark the testcase as unsupported.
-    if [regexp "(^|\n)\[^\n\]*: region \[^\n\]* is full" $text] {
-	# The format here is important.  See dg.exp.
-	return "::unsupported::memory full"
-    }
-
-    return $text
+    return [gcc-dg-prune $system $text]
 }
 
 # Record additional sources files that must be compiled along with the
