@@ -1,4 +1,4 @@
-#   Copyright (C) 1997, 1999, 2000 Free Software Foundation, Inc.
+#   Copyright (C) 1997, 1999, 2000, 2003 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -53,8 +53,18 @@ foreach option $TORTURE_OPTIONS {
 
 # Define gcc callbacks for dg.exp.
 
-proc gcc-dg-test { prog do_what extra_tool_flags } {
+proc gcc-dg-test-1 { target_compile prog do_what extra_tool_flags } {
     # Set up the compiler flags, based on what we're going to do.
+
+    set options [list]
+
+    # Tests should be able to use "dg-do repo".  However, the dg test
+    # driver checks the argument to dg-do against a list of acceptable
+    # options, and "repo" is not among them.  Therefore, we resort to
+    # this ugly approach.
+    if [string match "*-frepo*" $extra_tool_flags] then {
+	set do_what "repo"
+    }
 
     switch $do_what {
 	"preprocess" {
@@ -79,6 +89,10 @@ proc gcc-dg-test { prog do_what extra_tool_flags } {
 	    # The following line is needed for targets like the i960 where
 	    # the default output file is b.out.  Sigh.
 	}
+	"repo" {
+	    set compile_type "object"
+	    set output_file "[file rootname [file tail $prog]].o"
+	}
 	"run" {
 	    set compile_type "executable"
 	    # FIXME: "./" is to cope with "." not being in $PATH.
@@ -94,14 +108,25 @@ proc gcc-dg-test { prog do_what extra_tool_flags } {
 	    return ""
 	}
     }
-    set options ""
+
     if { $extra_tool_flags != "" } {
 	lappend options "additional_flags=$extra_tool_flags"
     }
 
-    set comp_output [gcc_target_compile "$prog" "$output_file" "$compile_type" $options];
+    set comp_output [$target_compile "$prog" "$output_file" "$compile_type" $options];
+
+    if { $do_what == "repo" } {
+	set object_file "$output_file"
+	set output_file "[file rootname [file tail $prog]].exe"
+	concat comp_output \
+	       [$target_compile "$object_file" "$output_file" "executable" $options]
+    }
 
     return [list $comp_output $output_file]
+}
+
+proc gcc-dg-test { prog do_what extra_tool_flags } {
+    return [gcc-dg-test-1 gcc_target_compile $prog $do_what $extra_tool_flags]
 }
 
 proc gcc-dg-prune { system text } {
